--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="drawer_close">Close</string>
     <string name="drawer_open">Open</string>
-    <string name="facebook_app_id">754290661377097</string>
+    <string name="facebook_app_id">1250377088376164</string>
+    <string name="fb_login_protocol_scheme">fb1250377088376164</string>
 
     <integer-array name="colors">
         <item>@color/color1</item>
