--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Thapar Express</string>
+    <string name="app_name">CampusBOX</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
@@ -15,6 +15,13 @@
         <item>@color/color5</item>
     </integer-array>
 
+    <!-- bottom nav bar -->
+    <string name="text_home">Home</string>
+    <string name="text_profile">Profile</string>
+    <string name="text_events">Events</string>
+    <string name="text_blogs">Blogs</string>
+    <string name="text_notifications">Notifications</string>
+
     <!-- navigation drawer item labels  -->
     <string-array name="nav_drawer_labels">
         <item>Home</item>
@@ -27,7 +34,7 @@
         <item>Store</item>
         <item>Syllabus</item>
         <item>Feedback</item>
-           <item>About</item>
+        <item>About</item>
        </string-array>
 
        <string-array name="spinner_cat">
